Removed hude margin definitions for all col classes which would overlap other elements and prevent links from working.

--- a/CSS/summer.css
+++ b/CSS/summer.css
@@ -1215,8 +1215,6 @@ hr {
 }
 
 [class*="col-"]{
-    margin-bottom: -99999px;
-    padding-bottom: 99999px;
     height: auto;
 }
 
